<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gps_locator.activities.LocatorActivity">

    <Button
        android:id="@+id/button_stop"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="36dp"
        android:text="@string/stop"
        android:radius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button_disconnect"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/guideline19" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="36dp"
        android:text="@string/search"
        android:radius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button_stop"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/guideline19" />

    <Button
        android:id="@+id/button_disconnect"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="84dp"
        android:text="@string/disconnect"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="@+id/guideline20"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/guideline19" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="355dp"
        android:layout_height="102dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline19">

        <Button
            android:id="@+id/button_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="110dp"
            android:layout_weight="1"
            android:radius="100dp"
            android:text="@string/home" />

        <Button
            android:id="@+id/button_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:radius="100dp"
            android:text="@string/map" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintEnd_toEndOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline21">

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/carter_one"
            android:text="@string/label"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_long_label"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="@font/carter_one"
            android:text="@string/longitude"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_long"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="@font/carter_one"
            android:gravity="top|center"
            android:text="@string/longitude_value"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_lat_label"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="@font/carter_one"
            android:text="@string/lattitude"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_lat"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="@font/carter_one"
            android:gravity="top|center"
            android:text="@string/lattitude_value"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_timeLabel"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="@font/carter_one"
            android:text="@string/time"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="@font/carter_one"
            android:gravity="top|center"
            android:text="@string/time_value"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

</androidx.constraintlayout.widget.ConstraintLayout>