<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".measure.MeasureActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/b_add"
        app:layout_constraintDimensionRatio="7:6"
        app:layout_constraintEnd_toEndOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline21" >

        <TextView
            android:id="@+id/tv_long_label"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="@font/carter_one"
            android:text="@string/obsah_"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_area"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/carter_one"
            android:gravity="top|center"
            android:text="@string/area_value"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_perim_label"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="@font/carter_one"
            android:text="@string/obvod"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_perim"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/carter_one"
            android:gravity="top|center"
            android:text="@string/perim_value"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_countLabel"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="@font/carter_one"
            android:text="@string/pocet"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/carter_one"
            android:gravity="top|center"
            android:text="@string/count_value"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/b_add"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/pridat"
        app:layout_constraintBottom_toTopOf="@+id/b_count"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="@+id/guideline20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:visibility="visible" />

    <Button
        android:id="@+id/b_count"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:layout_marginTop="45dp"
        android:text="@string/spocitat"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/b_add" />

    <Button
        android:id="@+id/b_backhome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/zpet"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline20" />

    <Button
        android:id="@+id/b_reload"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/znovu"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintStart_toStartOf="@+id/guideline19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.975" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.975" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.025" />


</androidx.constraintlayout.widget.ConstraintLayout>