<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.fragment.app.FragmentContainerView xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".gps_locator.MapLocationActivity" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_lat_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/carter_one"
                android:text="@string/longitude"
                android:textAlignment="center"
                android:textColor="#263238"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lattitude"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/carter_one"
                android:text="@string/lattitude"
                android:textAlignment="center"
                android:textColor="#263238"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_long_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/carter_one"
                android:text="@string/longitude"
                android:textAlignment="center"
                android:textColor="#263238"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/longitude"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/carter_one"
                android:text="@string/longitude"
                android:textAlignment="center"
                android:textColor="#263238"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:radius="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/back" />

</RelativeLayout>